	C. Thanks Tobias Kloffel.

2025-03-17  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/column_std.C (OrganicMatter): Make 'SOM2025' default.
	* src/daisy/organic_matter/organic_std.C (SOM2000, SOM2025): New
	parameterization.
	(default): Don't give 'smb' a default value.
	* src/daisy/organic_matter/bioincorporation.C (respiration): Set
	to zero by default.

2025-03-07  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/chemicals/chemical_std.C (canopy_dissipation_rate):
	Use Rate.

	* src/object_model/rate.C (Rate::declare_optional): New function.
	(Rate::value): Overloaded function with default value.

	* src/daisy/chemicals/chemical_std.C
	(canopy_dissipation_rate_coefficient): Removed obsolete parameter.

	* include/object_model/rate.h:
	* src/object_model/rate.C (Rate::set_halftime_cited): New function.

2025-03-06  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/organic_matter/om.C (turnover): Combine rate and
	halftime.
	* src/daisy/organic_matter/som.C:
	* src/daisy/organic_matter/aom.C:
	* src/object_model/parser_file.C (load_list): Handle '*_rate' and
	'*_halftime' parameters specially.

2025-03-04  Per Abrahamsen  <pa@plen.ku.dk>

	* include/daisy/chemicals/adsorption.h:
	* src/daisy/chemicals/adsorption.C (M_to_C_bisect):
	New function.
	* src/daisy/chemicals/adsorption_Python.C (M_to_C): Use
	'M_to_C_bisect' if no Python function is specified.

2025-03-03  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/chemicals/reaction_Python.C: New model.
	* src/daisy/chemicals/CMakeLists.txt: Add it.

2025-02-28  Per Abrahamsen  <pa@plen.ku.dk>

	* include/daisy/chemicals/reaction.h:
	* include/daisy/chemicals/chemistry.h (initialize): Take
	'chemistry' parameter.

2025-02-10  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/upper_boundary/bioclimate/resistance.C
	(Resistance::T_c): Fix parenthesis.

2025-01-29  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/crop/stomatacon_SHA.C (MNA): Mark obsolete.

	* src/daisy/crop/root/rubiscoNdist_DPF.C (f_photo): Removed